# manillen

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: push-chat.yml  push-frontend.yml
dockerfiles/keycloak/: keycloak.Dockerfile
dockerfiles/keycloak/init/: realm-export.json
dockerfiles/postgres/: postgres.Dockerfile
dockerfiles/postgres/init/: init-keycloak-db.sh
envs/: chat.local.env  frontend.local.env  keycloak.local.env  postgres.local.env
helm/: Chart.yaml  readme.md  values-local.yml
helm/scripts/: add-secrets-local.sh  delete-secrets.sh  install-local.sh  uninstall.sh  upgrade-local.sh
helm/templates/: ingress.yml
helm/templates/Chat/: deployment.yml  service.yml
helm/templates/Frontend/: deployment.yml
helm/templates/Keycloak/: configmap.yml  pv.yml  pvc.yml  service.yml  statefulset.yml
helm/templates/Postgres/: configmap.yml  pvc.yml  service.yml  statefulset.yml
helm/templates/Scripts/: pv.yml  pvc.yml
keycloak/: standalone-ha.xml
keycloak/realm/: realm-export.json
keycloak/themes/musicalia/account/: theme.properties
keycloak/themes/musicalia/login/: theme.properties
scripts/: build_and_push_to_local_registry.sh
src/chat/: .dockerignore  .env  Cargo.toml  Dockerfile  chat.Dockerfile
src/chat/src/: config.rs  endpoints.rs  main.rs  session.rs  web_socket.rs
src/frontend/: .dockerignore  .env.development  .env.local-cluster  Dockerfile  package.json
src/frontend/public/: keycloak.json
src/frontend/src/: App.tsx  constants.ts  index.tsx
src/frontend/src/app/: store.ts
(+19 files in other folders)
