[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-actors = "4.1.0"
actix-web = { version = "4.1.0" }
actix-session = { version = "0.7.1", features = ["cookie-session"]}
actix = "0.13.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
reqwest = "0.11.11"
dotenv = { version = "0.15.0" }
env_logger = { version="0.9.0" }
